--- a/green.html
+++ b/green.html
@@ -11,13 +11,13 @@
       padding-top: 2em;
     }
     img {
-      max-width: 350px;
+      max-width: 300px;
       margin-top: 1em;
     }
   </style>
 </head>
 <body>
   <h1>Welcome to the Green Team!</h1>
-  <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/003.png" alt="Venusaur" />
+  <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png" alt="Bulbasaur" />
 </body>
 </html>
