--- a/jimmy.html
+++ b/jimmy.html
@@ -18,6 +18,6 @@
 </head>
 <body>
   <h1>Welcome to the Jimmy Team!</h1>
-  <img src="https://archives.bulbagarden.net/media/upload/thumb/4/4b/Lets_Go_Pikachu_Eevee_Trainer_Red.png/350px-Lets_Go_Pikachu_Eevee_Trainer_Red.png" alt="Trainer Red" />
+  <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/trainers/official-artwork/red.png" alt="Trainer Red" />
 </body>
 </html>
