--- a/jimmy.html
+++ b/jimmy.html
@@ -18,6 +18,6 @@
 </head>
 <body>
   <h1>Welcome to the Jimmy Team!</h1>
-  <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/trainers/official-artwork/red.png" alt="Trainer Red" />
+  <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/025.png" alt="Pikachu" />
 </body>
 </html>
