--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Secret Mission Game</title>
+  <title>Jimmy Nashville Bachelor Games</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -51,7 +51,7 @@
 </head>
 <body>
 
-  <h1>Enter a keyword secret mission.</h1>
+  <h1>Pick your team</h1>
 
   <div class="teams">
     <button class="blue" onclick="goToTeam('blue')">Blue Team</button>
