--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </div>
 
   <div class="mission-section">
-    <input type="text" id="keywordInput" placeholder="Enter keyword..." />
+    <input type="text" id="keywordInput" placeholder="Secret mission..." />
     <br/>
     <button onclick="checkMission()">Submit</button>
     <div class="mission" id="missionResult"></div>
