--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jimmy Nashville Bachelor Games</title>
+  <title>Secret Mission Game</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -14,22 +14,35 @@
     h1 {
       color: #333;
     }
+
     .teams {
       margin: 2em 0;
     }
+
     .teams button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       font-size: 1.2em;
       margin: 0.5em;
-      padding: 1em 2em;
+      padding: 1em 1.5em;
       border: none;
       border-radius: 8px;
       cursor: pointer;
       color: white;
+      width: 250px;
+      max-width: 90%;
     }
+
+    .teams img {
+      height: 30px;
+      margin-right: 10px;
+    }
+
     .blue { background-color: #3b82f6; }
     .red { background-color: #ef4444; }
     .green { background-color: #10b981; }
-    .jimmy { background-color: #a855f7; }
+    .jimmy { background-color: #facc15; color: #1f1f1f; }
 
     .mission-section {
       margin-top: 2em;
@@ -47,21 +60,39 @@
       font-size: 1.2em;
       color: #111827;
     }
+
+    .team-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
   </style>
 </head>
 <body>
 
-  <h1>Pick your team</h1>
+  <h1>Enter a keyword secret mission.</h1>
 
-  <div class="teams">
-    <button class="blue" onclick="goToTeam('blue')">Blue Team</button>
-    <button class="red" onclick="goToTeam('red')">Red Team</button>
-    <button class="green" onclick="goToTeam('green')">Green Team</button>
-    <button class="jimmy" onclick="goToTeam('jimmy')">Jimmy Team</button>
+  <div class="teams team-container">
+    <button class="blue" onclick="goToTeam('blue')">
+      <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/007.png" alt="Squirtle" />
+      Blue Team
+    </button>
+    <button class="red" onclick="goToTeam('red')">
+      <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/004.png" alt="Charmander" />
+      Red Team
+    </button>
+    <button class="green" onclick="goToTeam('green')">
+      <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png" alt="Bulbasaur" />
+      Green Team
+    </button>
+    <button class="jimmy" onclick="goToTeam('jimmy')">
+      <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/025.png" alt="Pikachu" />
+      Jimmy Team
+    </button>
   </div>
 
   <div class="mission-section">
-    <input type="text" id="keywordInput" placeholder="Secret mission..." />
+    <input type="text" id="keywordInput" placeholder="Enter keyword..." />
     <br/>
     <button onclick="checkMission()">Submit</button>
     <div class="mission" id="missionResult"></div>
