--- a/jimmy.html
+++ b/jimmy.html
@@ -5,7 +5,7 @@
   <title>Jimmy Team</title>
   <style>
     body {
-      background-color: #ede9fe;
+      background-color: #fef08a; /* Light yellow */
       text-align: center;
       font-family: Arial, sans-serif;
       padding-top: 2em;
@@ -13,6 +13,9 @@
     img {
       max-width: 300px;
       margin-top: 1em;
+    }
+    h1 {
+      color: #78350f; /* A warm dark for contrast */
     }
   </style>
 </head>
