--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Secret Mission Game</title>
+  <title>Nashville Bachelor Games</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -70,7 +70,7 @@
 </head>
 <body>
 
-  <h1>Enter a keyword secret mission.</h1>
+  <h1>Nashville Bachelor Games</h1>
 
   <div class="teams team-container">
     <button class="blue" onclick="goToTeam('blue')">
@@ -92,7 +92,7 @@
   </div>
 
   <div class="mission-section">
-    <input type="text" id="keywordInput" placeholder="Enter keyword..." />
+    <input type="text" id="keywordInput" placeholder="Secret mission..." />
     <br/>
     <button onclick="checkMission()">Submit</button>
     <div class="mission" id="missionResult"></div>
