--- a/green.html
+++ b/green.html
@@ -2,22 +2,50 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Green Team</title>
   <style>
     body {
-      background-color: #d1fae5;
-      text-align: center;
       font-family: Arial, sans-serif;
-      padding-top: 2em;
+      background-color: #22c55e;
+      color: white;
+      text-align: center;
+      padding: 2em;
     }
     img {
-      max-width: 300px;
+      max-width: 200px;
+      margin-bottom: 1em;
+    }
+    ol {
+      text-align: left;
+      display: inline-block;
+      font-size: 1.1em;
+    }
+    .bonus {
       margin-top: 1em;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to the Green Team!</h1>
+  <h1>Green Team</h1>
   <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png" alt="Bulbasaur" />
+  
+  <p>All of these efforts will be rated by the group from 0–5</p>
+  <ol>
+    <li>Find an object or animal that resembles a ‘green’ Pokemon</li>
+    <li>Eat something ‘green’</li>
+    <li>During the trip make a ‘green’ drink, or order one</li>
+    <li>During a supply run, find and buy something unique that’s ‘green’</li>
+    <li>Find something ‘green’ at one of the nights out</li>
+    <li>Find something ‘green’ at either the Museum or Parthenon</li>
+    <li>Find a ‘green’ item that resembles Nashville</li>
+  </ol>
+
+  <div class="bonus">
+    Bonus - Take a picture of someone or something that resembles Jimmy<br/>
+    Bonus - Have a conversation with a Nashville native and get a food suggestion<br/>
+    Bonus - Practice your rizz with a stranger or strange thing
+  </div>
 </body>
 </html>
