--- a/jimmy.html
+++ b/jimmy.html
@@ -2,25 +2,50 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jimmy Team</title>
   <style>
     body {
-      background-color: #fef08a; /* Light yellow */
-      text-align: center;
       font-family: Arial, sans-serif;
-      padding-top: 2em;
+      background-color: #facc15;
+      color: black;
+      text-align: center;
+      padding: 2em;
     }
     img {
-      max-width: 300px;
-      margin-top: 1em;
+      max-width: 200px;
+      margin-bottom: 1em;
     }
-    h1 {
-      color: #78350f; /* A warm dark for contrast */
+    ol {
+      text-align: left;
+      display: inline-block;
+      font-size: 1.1em;
+    }
+    .bonus {
+      margin-top: 1em;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to the Jimmy Team!</h1>
+  <h1>Jimmy Team</h1>
   <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/025.png" alt="Pikachu" />
+  
+  <p>All of these efforts will be rated by the group from 0–5</p>
+  <ol>
+    <li>Find an object or animal that resembles a ‘yellow’ Pokemon</li>
+    <li>Eat something ‘yellow’</li>
+    <li>During the trip make a ‘yellow’ drink, or order one</li>
+    <li>During a supply run, find and buy something unique that’s ‘yellow’</li>
+    <li>Find something ‘yellow’ at one of the nights out</li>
+    <li>Find something ‘yellow’ at either the Museum or Parthenon</li>
+    <li>Find a ‘yellow’ item that resembles Nashville</li>
+  </ol>
+
+  <div class="bonus">
+    Bonus - Take a picture of someone or something that resembles Jimmy<br/>
+    Bonus - Have a conversation with a Nashville native and get a food suggestion<br/>
+    Bonus - Practice your rizz with a stranger or strange thing
+  </div>
 </body>
 </html>
