--- a/index.html
+++ b/index.html
@@ -2,64 +2,184 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Nashville Bachelor Games</title>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
-      text-align: center;
-      padding: 2em;
+      font-family: 'Press Start 2P', cursive, Arial, sans-serif;
+      background: #f9f9f9;
+      margin: 0; padding: 2em; text-align: center;
+      color: #222;
     }
     h1 {
+      font-size: 2.2em;
       margin-bottom: 1.5em;
+      color: #333;
     }
     .team-buttons {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 1em;
+      gap: 1.5em;
       margin-bottom: 2em;
     }
     .team-btn {
       border: none;
-      padding: 1em;
       border-radius: 12px;
-      width: 150px;
+      width: 160px;
+      padding: 1em 0.5em 0.5em;
       cursor: pointer;
       color: white;
-      font-size: 1em;
+      font-size: 0.85em;
+      user-select: none;
+      box-shadow: 0 3px 8px rgb(0 0 0 / 0.2);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
-    .blue { background-color: #3b82f6; }
-    .red { background-color: #ef4444; }
-    .green { background-color: #22c55e; }
-    .yellow { background-color: #facc15; color: black; }
-
+    .team-btn:hover {
+      transform: scale(1.05);
+      box-shadow: 0 6px 14px rgb(0 0 0 / 0.3);
+    }
+    .blue {
+      background-color: #3b82f6;
+    }
+    .red {
+      background-color: #ef4444;
+    }
+    .green {
+      background-color: #22c55e;
+    }
+    .yellow {
+      background-color: #facc15;
+      color: black;
+    }
     .team-btn img {
-      display: block;
-      margin: 0 auto 0.5em auto;
-      max-width: 80px;
+      width: 96px;
+      height: 96px;
+      filter: drop-shadow(0 0 2px rgba(0,0,0,0.3));
+      margin-bottom: 0.4em;
+      image-rendering: pixelated;
     }
-
     .keyword-section {
-      margin-top: 2em;
+      max-width: 320px;
+      margin: 0 auto;
+      text-align: center;
+    }
+    .keyword-section p {
+      font-size: 1.1em;
+      margin-bottom: 0.5em;
     }
     input[type="text"] {
+      width: 70%;
       padding: 0.5em;
       font-size: 1em;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      width: 200px;
+      border-radius: 8px;
+      border: 2px solid #ccc;
+      outline-offset: 2px;
+      transition: border-color 0.3s ease;
+    }
+    input[type="text"]:focus {
+      border-color: #3b82f6;
     }
     button.go-btn {
       padding: 0.5em 1em;
       font-size: 1em;
       margin-left: 0.5em;
       border: none;
+      border-radius: 8px;
       background-color: #3b82f6;
       color: white;
-      border-radius: 6px;
       cursor: pointer;
+      user-select: none;
+      box-shadow: 0 3px 6px rgb(0 0 0 / 0.15);
+      transition: background-color 0.3s ease;
+    }
+    button.go-btn:hover {
+      background-color: #2563eb;
+    }
+    .copy-links {
+      margin-top: 1.2em;
+      display: flex;
+      justify-content: center;
+      gap: 1em;
+      flex-wrap: wrap;
+    }
+    .copy-link-btn {
+      background: #666;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      padding: 0.4em 0.8em;
+      font-size: 0.8em;
+      cursor: pointer;
+      user-select: none;
+      box-shadow: 0 2px 5px rgb(0 0 0 / 0.2);
+      transition: background-color 0.3s ease;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+    }
+    .copy-link-btn:hover {
+      background-color: #444;
+    }
+    .copy-link-btn:active {
+      background-color: #222;
+    }
+    .copy-link-btn svg {
+      width: 16px;
+      height: 16px;
+      fill: currentColor;
+    }
+    #mission-reveal {
+      margin-top: 1.5em;
+      padding: 1em;
+      border-radius: 12px;
+      background: #e0f2fe;
+      box-shadow: 0 3px 10px rgb(59 130 246 / 0.3);
+      display: none;
+      user-select: none;
+    }
+    #mission-reveal img {
+      max-width: 100px;
+      margin: 0.5em auto;
+      display: block;
+      image-rendering: pixelated;
+    }
+
+    /* Confetti canvas */
+    #confetti-canvas {
+      position: fixed;
+      pointer-events: none;
+      top: 0; left: 0; width: 100%; height: 100%;
+      z-index: 9999;
+      display: none;
+    }
+
+    /* Responsive */
+    @media (max-width: 480px) {
+      .team-btn {
+        width: 120px;
+        font-size: 0.7em;
+      }
+      .team-btn img {
+        width: 72px;
+        height: 72px;
+      }
+      input[type="text"] {
+        width: 100%;
+        margin-bottom: 0.5em;
+      }
+      button.go-btn {
+        margin-left: 0;
+        width: 100%;
+      }
+      .copy-links {
+        flex-direction: column;
+        gap: 0.6em;
+      }
     }
   </style>
 </head>
@@ -67,46 +187,165 @@
   <h1>Nashville Bachelor Games</h1>
 
   <div class="team-buttons">
-    <button class="team-btn blue" onclick="location.href='blue.html'">
-      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/7.png" alt="Squirtle silhouette"/>
+    <button class="team-btn blue" onclick="window.open('blue.html', '_blank')">
+      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/7.png" alt="Squirtle silhouette" />
       Blue Team
     </button>
-    <button class="team-btn red" onclick="location.href='red.html'">
-      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/4.png" alt="Charmander silhouette"/>
+    <button class="team-btn red" onclick="window.open('red.html', '_blank')">
+      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/4.png" alt="Charmander silhouette" />
       Red Team
     </button>
-    <button class="team-btn green" onclick="location.href='green.html'">
-      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/1.png" alt="Bulbasaur silhouette"/>
+    <button class="team-btn green" onclick="window.open('green.html', '_blank')">
+      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/1.png" alt="Bulbasaur silhouette" />
       Green Team
     </button>
-    <button class="team-btn yellow" onclick="location.href='jimmy.html'">
-      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/25.png" alt="Pikachu silhouette"/>
+    <button class="team-btn yellow" onclick="window.open('jimmy.html', '_blank')">
+      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/25.png" alt="Pikachu silhouette" />
       Jimmy Team
     </button>
   </div>
 
   <div class="keyword-section">
     <p>Enter a keyword secret mission.</p>
-    <input type="text" id="keyword" placeholder="Secret mission..." />
+    <input type="text" id="keyword" placeholder="Secret mission..." autocomplete="off" />
     <button class="go-btn" onclick="checkKeyword()">Go</button>
   </div>
 
+  <div id="mission-reveal">
+    <h2 id="mission-text"></h2>
+    <img id="mission-img" src="" alt="Mission Pokémon GIF" />
+  </div>
+
+  <div class="copy-links">
+    <button class="copy-link-btn" onclick="copyLink('blue.html')">
+      📋 Copy Blue Team Link
+    </button>
+    <button class="copy-link-btn" onclick="copyLink('red.html')">
+      📋 Copy Red Team Link
+    </button>
+    <button class="copy-link-btn" onclick="copyLink('green.html')">
+      📋 Copy Green Team Link
+    </button>
+    <button class="copy-link-btn" onclick="copyLink('jimmy.html')">
+      📋 Copy Jimmy Team Link
+    </button>
+  </div>
+
+  <canvas id="confetti-canvas"></canvas>
+
   <script>
+    const confettiCanvas = document.getElementById('confetti-canvas');
+    const ctx = confettiCanvas.getContext('2d');
+    let confettiPieces = [];
+
+    function resizeCanvas() {
+      confettiCanvas.width = window.innerWidth;
+      confettiCanvas.height = window.innerHeight;
+    }
+    window.addEventListener('resize', resizeCanvas);
+    resizeCanvas();
+
+    class ConfettiPiece {
+      constructor() {
+        this.x = Math.random() * confettiCanvas.width;
+        this.y = Math.random() * confettiCanvas.height - confettiCanvas.height;
+        this.size = (Math.random() * 8) + 4;
+        this.speed = (Math.random() * 3) + 2;
+        this.angle = Math.random() * 2 * Math.PI;
+        this.color = `hsl(${Math.random() * 360}, 70%, 60%)`;
+        this.spin = (Math.random() - 0.5) * 0.1;
+      }
+      update() {
+        this.y += this.speed;
+        this.angle += this.spin;
+        if (this.y > confettiCanvas.height) {
+          this.y = -this.size;
+          this.x = Math.random() * confettiCanvas.width;
+        }
+      }
+      draw() {
+        ctx.save();
+        ctx.translate(this.x, this.y);
+        ctx.rotate(this.angle);
+        ctx.fillStyle = this.color;
+        ctx.fillRect(-this.size / 2, -this.size / 2, this.size, this.size / 2);
+        ctx.restore();
+      }
+    }
+
+    function startConfetti() {
+      confettiPieces = [];
+      for(let i=0; i<100; i++) {
+        confettiPieces.push(new ConfettiPiece());
+      }
+      confettiCanvas.style.display = 'block';
+      requestAnimationFrame(confettiLoop);
+      setTimeout(() => {
+        confettiCanvas.style.display = 'none';
+      }, 5000);
+    }
+
+    function confettiLoop() {
+      ctx.clearRect(0, 0, confettiCanvas.width, confettiCanvas.height);
+      confettiPieces.forEach(piece => {
+        piece.update();
+        piece.draw();
+      });
+      if(confettiCanvas.style.display === 'block') {
+        requestAnimationFrame(confettiLoop);
+      }
+    }
+
+    const missions = {
+      abs: {
+        text: "Congrats! You’ve unlocked a secret Abdullah mission. Send a selfie to Abdullah.",
+        img: "https://64.media.tumblr.com/7eeaeed20a75d8240e0ec16acb721bbe/tumblr_povmknRIBj1r20ns3o1_400.gif" // Machamp flexing
+      },
+      jimmy: {
+        text: "Nothing to congratulate, this is the free mission. Take a picture of someone or something that resembles our boy Jimmy.",
+        img: "https://media.giphy.com/media/l0MYK7eNcr0l3JkqI/giphy.gif" // Funny Pikachu
+      },
+      robert: {
+        text: "Congrats! You’ve unlocked an even secret-er Robert mission. Get Robert to send you a selfie.",
+        img: "https://media.giphy.com/media/7rQLoyksyoPMk/giphy.gif" // Snorlax waking up
+      },
+      nashville: {
+        text: "Now this is a secret mission, take a picture of something historical in Nashville.",
+        img: "https://media.giphy.com/media/FqLYvDv5cBqie/giphy.gif" // Rapidash
+      },
+      bachelor: {
+        text: "Whoa, now you’re thinking, take a picture of Jimmy being serious.",
+        img: "https://media.giphy.com/media/v4vLLQGxERdu4/giphy.gif" // Brock serious
+      }
+    };
+
     function checkKeyword() {
-      const kw = document.getElementById('keyword').value.trim().toLowerCase();
-      if (kw === "abs") {
-        alert("Congrats! You’ve unlocked a secret Abdullah mission. Send a selfie to Abdullah.");
-      } else if (kw === "jimmy") {
-        alert("Nothing to congratulate, this is the free mission. Take a picture of someone or something that resembles our boy Jimmy.");
-      } else if (kw === "robert") {
-        alert("Congrats! You’ve unlocked an even secret-er Robert mission. Get Robert to send you a selfie.");
-      } else if (kw === "nashville") {
-        alert("Now this is a secret mission, take a picture of something historical in Nashville.");
-      } else if (kw === "bachelor") {
-        alert("Whoa, now you’re thinking, take a picture of Jimmy being serious.");
+      const input = document.getElementById('keyword');
+      const val = input.value.trim().toLowerCase();
+      const reveal = document.getElementById('mission-reveal');
+      const missionText = document.getElementById('mission-text');
+      const missionImg = document.getElementById('mission-img');
+
+      if (missions[val]) {
+        missionText.textContent = missions[val].text;
+        missionImg.src = missions[val].img;
+        missionImg.alt = val + " mission image";
+        reveal.style.display = 'block';
+        startConfetti();
       } else {
         alert("No mission found for that keyword!");
+        reveal.style.display = 'none';
       }
+      input.value = '';
+    }
+
+    function copyLink(page) {
+      const url = window.location.origin + window.location.pathname.replace(/index\.html$/, '') + page;
+      navigator.clipboard.writeText(url).then(() => {
+        alert(`Link copied to clipboard: ${url}`);
+      }, () => {
+        alert('Failed to copy link.');
+      });
     }
   </script>
 </body>
