--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Nashville Bachelor Games</title>
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
   <style>
     body {
-      font-family: 'Press Start 2P', cursive, Arial, sans-serif;
+      font-family: Arial, sans-serif;
       background: #f9f9f9;
       margin: 0; padding: 2em; text-align: center;
       color: #222;
