--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
   </div>
 
   <div class="keyword-section">
-    <p>Enter a keyword secret mission.</p>
+    <p>Enter a keyword for a secret mission.</p>
     <input type="text" id="keyword" placeholder="Secret mission..." autocomplete="off" />
     <button class="go-btn" onclick="checkKeyword()">Go</button>
   </div>
@@ -298,23 +298,23 @@
     const missions = {
       abs: {
         text: "Congrats! You’ve unlocked a secret Abdullah mission. Send a selfie to Abdullah.",
-        img: "https://64.media.tumblr.com/7eeaeed20a75d8240e0ec16acb721bbe/tumblr_povmknRIBj1r20ns3o1_400.gif" // Machamp flexing
+        img: "https://play.pokemonshowdown.com/sprites/ani/machamp.gif"
       },
       jimmy: {
         text: "Nothing to congratulate, this is the free mission. Take a picture of someone or something that resembles our boy Jimmy.",
-        img: "https://media.giphy.com/media/l0MYK7eNcr0l3JkqI/giphy.gif" // Funny Pikachu
+        img: "https://play.pokemonshowdown.com/sprites/ani/pikachu.gif"
       },
       robert: {
         text: "Congrats! You’ve unlocked an even secret-er Robert mission. Get Robert to send you a selfie.",
-        img: "https://media.giphy.com/media/7rQLoyksyoPMk/giphy.gif" // Snorlax waking up
+        img: "https://play.pokemonshowdown.com/sprites/ani/snorlax.gif"
       },
       nashville: {
         text: "Now this is a secret mission, take a picture of something historical in Nashville.",
-        img: "https://media.giphy.com/media/FqLYvDv5cBqie/giphy.gif" // Rapidash
+        img: "https://play.pokemonshowdown.com/sprites/ani/rapidash.gif"
       },
       bachelor: {
         text: "Whoa, now you’re thinking, take a picture of Jimmy being serious.",
-        img: "https://media.giphy.com/media/v4vLLQGxERdu4/giphy.gif" // Brock serious
+        img: "https://play.pokemonshowdown.com/sprites/ani/brock.gif"
       }
     };
 
