--- a/index.html
+++ b/index.html
@@ -127,11 +127,6 @@
     .copy-link-btn:active {
       background-color: #222;
     }
-    .copy-link-btn svg {
-      width: 16px;
-      height: 16px;
-      fill: currentColor;
-    }
     #mission-reveal {
       margin-top: 1.5em;
       padding: 1em;
@@ -187,19 +182,19 @@
 
   <div class="team-buttons">
     <button class="team-btn blue" onclick="window.open('blue.html', '_blank')">
-      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/7.png" alt="Squirtle silhouette" />
+      <img src="https://play.pokemonshowdown.com/sprites/ani/squirtle.gif" alt="Squirtle animation" />
       Blue Team
     </button>
     <button class="team-btn red" onclick="window.open('red.html', '_blank')">
-      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/4.png" alt="Charmander silhouette" />
+      <img src="https://play.pokemonshowdown.com/sprites/ani/charmander.gif" alt="Charmander animation" />
       Red Team
     </button>
     <button class="team-btn green" onclick="window.open('green.html', '_blank')">
-      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/1.png" alt="Bulbasaur silhouette" />
+      <img src="https://play.pokemonshowdown.com/sprites/ani/bulbasaur.gif" alt="Bulbasaur animation" />
       Green Team
     </button>
     <button class="team-btn yellow" onclick="window.open('jimmy.html', '_blank')">
-      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/25.png" alt="Pikachu silhouette" />
+      <img src="https://play.pokemonshowdown.com/sprites/ani/pikachu.gif" alt="Pikachu animation" />
       Jimmy Team
     </button>
   </div>
