--- a/blue.html
+++ b/blue.html
@@ -27,11 +27,13 @@
     margin-bottom: 1em;
   }
   ul.mission-list {
-    font-size: 1.3em;
+    font-size: 1.15em;
     text-align: left;
     max-width: 480px;
     margin: 0 auto;
     line-height: 1.5em;
+    list-style-type: decimal;
+    padding-left: 1.5em;
   }
   ul.mission-list li {
     margin-bottom: 0.8em;
